Implement child indexing on validation messages, provide clarity on the page the message appears in
i.e messaging is different on application search page as it is to the enter child details page, because on the application search page the fields arent required

--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -20,9 +20,10 @@
 </h1>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
-    <input type="hidden" id="ChildIndex" />
+
     @for (int i = 0; i < Model.ChildList.Count; i++)
     {
+        <input type="hidden" asp-for="ChildList[i].ChildIndex" value="@(i + 1)" id="ChildIndex" />
         <div id="childNumber@(@i)">
         <fieldset class="govuk-fieldset moj-add-another__item">
             <legend class="govuk-fieldset__legend moj-add-another__title govuk-fieldset__legend--m">
