--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -1,22 +1,36 @@
-<a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
-@* <a class="govuk-back-link-nolink"></a> *@
 
 <div id="content" data-type="Technical_Error" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+        <!-- Notification Banner -->
+        <div class="govuk-notification-banner"
+             role="region"
+             aria-labelledby="govuk-notification-banner-title"
+             data-module="govuk-notification-banner">
             <div class="govuk-notification-banner__header">
                 <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
                     Check failed
                 </h2>
             </div>
             <div class="govuk-notification-banner__content">
-                <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
-                <p>@Html.ActionLink("Try again later", "Enter_Details", "Check"), ensuring you’ve entered the parent or guardian details accurately.</p>
+                <p class="govuk-notification-banner__heading">
+                    There's been a technical error.
+                </p>
+                <p>
+                    <a href="@Url.Action("Enter_Details", "Check")" class="govuk-link">
+                        Try again later
+                    </a>, ensuring you've entered the parent or guardian details accurately.
+                </p>
             </div>
         </div>
 
+        <!-- Additional Help Section -->
         <h1 class="govuk-heading-l">If the check keeps failing</h1>
-        <a>Contact the <a href="@Configuration["ContactUsUrl"]"> Department for Education support desk.</a>
+        <p>
+            Contact the
+            <a href="@Configuration["ContactUsUrl"]" class="govuk-link">
+                Department for Education support desk
+            </a>.
+        </p>
     </div>
 </div>
