--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -29,7 +29,7 @@
         <p>
             Contact the
             <a href="@Configuration["ContactUsUrl"]" class="govuk-link">
-                Department for Education support desk
+                Department for Education support desk.
             </a>.
         </p>
     </div>
