use ViewData-Title as a parameter for page titles so tab headings and titles match for accessibility

--- a/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
@@ -2,6 +2,7 @@
 @model PeopleSelectionViewModel;
 
 @{
+    ViewData["Title"] = "Process appeals (" + @ViewBag.TotalRecords + ")";
     ViewData["Layout"] = "full";
 }
 
@@ -11,7 +12,7 @@
 <div class="moj-page-header-actions">
 
     <div class="moj-page-header-actions__title">
-        <h1 class="govuk-heading-l">Process appeals (@ViewBag.TotalRecords)</h1>
+        <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
     </div>
 </div>
 <div class="govuk-width-container">
