--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailAppealConfirmation.cshtml
@@ -2,6 +2,7 @@
 <a class="govuk-back-link-nolink"></a>
 
 @{
+    ViewData["Title"] = "Send this record to the local authority?";
     ViewData["Layout"] = "two_thirds";
 }
 
