--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Data_Issue.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Data_Issue.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Could not check eligibility";
+    ViewData["Title"] = "Error – Parent data issue";
 }
 
 <div id="content" data-type="ErrorData">
