--- a/CheckYourEligibility-Admin/Views/Check/ApplicationsRegistered.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/ApplicationsRegistered.cshtml
@@ -2,7 +2,7 @@
 @model ApplicationConfirmationEntitledViewModel
 
 @{
-    ViewData["Title"] = "confirmation-entitled";
+    ViewData["Title"] = "Success - Children's details added";
     ViewData["Layout"] = "full";
 }
 
