--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "May not be eligible";
+}
+
 <a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
     @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 @* <a class="govuk-back-link-nolink"></a> *@
