--- a/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CheckYourEligibility_FrontEnd.Models.ParentGuardian
 
 @{
-    ViewData["Title"] = "Check Details";
+    ViewData["Title"] = "Process appeals";
     ViewData["Layout"] = "full";
 }
 
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-full">
         <div class="moj-page-header-actions">
             <div class="moj-page-header-actions__title">
-                <h1 class="govuk-heading-l">Process appeals (12)</h1>
+                <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
             </div>
         </div>
         <div class="govuk-width-container">
