--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailFinalise.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailFinalise.cshtml
@@ -2,6 +2,7 @@
 @model ApplicationDetailViewModel
 
 @{
+    ViewData["Title"] = @Model.ParentName;
     ViewData["Layout"] = "full";
 }
 
@@ -10,7 +11,7 @@
 
 <div class="moj-page-header-actions">
     <div class="moj-page-header-actions__title">
-        <h1 class="govuk-heading-xl">@Model.ParentName</h1>
+        <h1 class="govuk-heading-xl">@ViewData["Title"]</h1>
     </div>
     <div class="moj-page-header-actions__actions">
         <div class="moj-button-menu">
