--- a/CheckYourEligibility-Admin/Views/Application/ApplicationFinaliseConfirmation.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationFinaliseConfirmation.cshtml
@@ -1,11 +1,12 @@
 ﻿@{
+    ViewData["Title"] = "Finalise these applications?";
     ViewData["Layout"] = "two_thirds";
 }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<h1 class="govuk-heading-l">Finalise these applications?</h1>
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 <div class="govuk-warning-text">
     <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
     <strong class="govuk-warning-text__text">
