--- a/CheckYourEligibility-Admin/Views/Application/FinaliseApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/FinaliseApplications.cshtml
@@ -2,6 +2,7 @@
 @model PeopleSelectionViewModel;
 
 @{
+    ViewData["Title"] = "Finalise applications (" + @ViewBag.TotalRecords + ")";
     ViewData["Layout"] = "full";
     var errorMessage = TempData["ErrorMessage"] as string;
 }
@@ -11,7 +12,7 @@
 
 <div class="moj-page-header-actions">
     <div class="moj-page-header-actions__title">
-        <h1 class="govuk-heading-l">Finalise applications (@ViewBag.TotalRecords)</h1>
+        <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
     </div>
 </div>
 <div class="govuk-width-container">
