--- a/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
@@ -21,6 +21,7 @@
         {"ReviewedEntitled", "Reviewed Entitled"},
         {"ReviewedNotEntitled", "Reviewed Not Entitled"}
     };
+    ViewData["Title"] = "Pending applications (" + @ViewBag.TotalRecords + ")";
     ViewData["Layout"] = "full";
 }
 
@@ -29,7 +30,7 @@
 
 <div class="moj-page-header-actions">
     <div class="moj-page-header-actions__title">
-        <h1 class="govuk-heading-l">Pending applications (@ViewBag.TotalRecords)</h1>
+        <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
     </div>
 </div>
 <details class="govuk-details">
