--- a/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
@@ -2,6 +2,7 @@
 @model PeopleSelectionViewModel;
 
 @{
+    ViewData["Title"] = "Search results (" + @ViewBag.TotalRecords + ")";
     ViewData["Layout"] = "full";
 }
 
@@ -11,7 +12,7 @@
 <div class="moj-page-header-actions">
     <div class="moj-page-header-actions__title">
         <h1 class="govuk-heading-l">
-            Search results (@ViewBag.TotalRecords)
+            @ViewData["Title"]
         </h1>
     </div>
     <div class="moj-page-header-actions__actions">
