--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Could not check eligibility";
+    ViewData["Title"] = "Error – File not accepted";
 }
 
 <div id="content" data-type="ErrorNotAccepted">
