--- a/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
@@ -2,23 +2,17 @@
 @model CheckYourEligibility_FrontEnd.Models.FsmApplication;
 
 @{
-    ViewData["Title"] = "Check Answers";
+    ViewData["Title"] = "Check your answers before submitting";
     ViewData["Layout"] = "full";
 }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a>*@
 <a class="govuk-back-link-nolink"></a>
 
-@if (!ViewData.ModelState.IsValid)
-{
-    ViewData["Title"] = "Check Answers";
-    <partial name="_ValidationSummary" model="ViewData.ModelState" />
-}
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-        <h1 class="govuk-heading-l">Check your answers before submitting</h1>
+        <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
         <div class="govuk-summary-card">
             <div class="govuk-summary-card__title-wrapper">
