--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Children eligible";
+}
+
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
