--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "May not be eligible";
+}
+
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 <a class="govuk-back-link-nolink"></a>
