--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Check failed";
+}
+
 <a class="govuk-back-link" @Html.ActionLink("Back", "Enter_Details", "Check")</a>
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 @* <a class="govuk-back-link-nolink"></a> *@
