--- a/CheckYourEligibility-Admin/Views/Home/Accessibility.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Accessibility.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Accessibility";
+    ViewData["Title"] = "Accessibility statement";
     ViewData["Layout"] = "two_thirds";
 }
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">Accessibility statement</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">@ViewData["Title"]</h1>
 
 
 <p>This accessibility statement applies to Connect families to support.</p>
