--- a/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
@@ -7,7 +7,7 @@
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-4">Cookies</h1>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-4">@ViewData["Title"]</h1>
 
 <p>The Check if a child can get free school meals service puts small files (known as ‘cookies’) onto your computer to collect information about how you browse the site. </p>
 
