--- a/CheckYourEligibility-Admin/Views/Home/Guidance.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Guidance.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Guidance";
+    ViewData["Title"] = "Guidance for reviewing evidence";
     ViewData["Layout"] = "two_thirds";
 }
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<h1 class="govuk-heading-l">Guidance for reviewing evidence </h1>
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
+
 <p>To find out if the children of a parent or guardian are entitled to free school meals, you’ll need to review the supporting evidence they've provided. </p>
 <p>Choose the relevant section from the evidence list for tailored guidance on how to review.</p>
 
