--- a/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Privacy.cshtml
@@ -7,7 +7,7 @@
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<h1 class="govuk-heading-l">Privacy Notice</h1>
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
 <h2 class="govuk-heading-m">Who we are</h2>
 <p class="govuk-body">
