Update to a few files missed on first sweep

--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
@@ -9,9 +9,7 @@
     <div class="govuk-grid-column-two-thirds">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
-                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                    Check failed
-                </h2>
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">@ViewData["Title"]</h2>
             </div>
             <div class="govuk-notification-banner__content">
                 <p class="govuk-notification-banner__heading">The personal information you entered does not match departmental records.</p>
