--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CheckYourEligibility_FrontEnd.Models.Parent
 
 @{
-    ViewData["Title"] = "Check Details";
+    ViewData["Title"] = "Run a check for one parent or guardian";
     ViewData["Layout"] = "two_thirds";
 }
 
@@ -10,11 +10,11 @@
 
 @if (!ViewData.ModelState.IsValid)
 {
-    ViewData["Title"] = "Error: Check Details";
+    ViewData["Title"] = "Error: Run a check for one parent or guardian";
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
 
-<h1 class="govuk-heading-l">Enter your details</h1>
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
 <p>The information you provide will be compared with other government departments records to check for your eligibility.</p>
 <p>For further information, please check our <a href="@Url.Action("Privacy", "Home")">Privacy statement</a>.</p>
