--- a/CheckYourEligibility-Parent/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Http.Extensions
 @{
     Layout = "~/Views/Shared/_Layout_StartNow.cshtml";
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Dashboard";
     // var url = UriHelper.GetDisplayUrl(HttpContextAccessor.HttpContext.Request);
     // url = url.Replace("as", "as-admin");
 }
