--- a/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/fsm_print_version.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "FSM Print Version";
+    ViewData["Title"] = "Apply for free school meals with a form";
     ViewData["Layout"] = "two_thirds";
 }
 
@@ -9,7 +9,7 @@
 
 <div class="govuk-grid-row">
 
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">Apply for free school meals with a form</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-4 govuk-!-margin-top-2">@ViewData["Title"]</h1>
 
     <p>Download and complete this form if you cannot check free school meal entitlement online.</p>
 
