--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -2,7 +2,7 @@
 @model CheckYourEligibility.Domain.Responses.ApplicationSaveItemResponse
 
 @{
-    ViewData["Title"] = "Application Sent";
+    ViewData["Title"] = "Application complete";
     ViewData["Layout"] = "full";
     var responseJson = TempData["FsmApplicationResponses"] as string;
     var responses = JsonConvert.DeserializeObject<List<CheckYourEligibility.Domain.Responses.ApplicationSaveItemResponse>>(responseJson);
@@ -11,16 +11,10 @@
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-@if (!ViewData.ModelState.IsValid)
-{
-    ViewData["Title"] = "Application Sent";
-    <partial name="_ValidationSummary" model="ViewData.ModelState" />
-}
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
-            <h1 class="govuk-panel__title">Application complete</h1>
+            <h1 class="govuk-panel__title">@ViewData["Title"]</h1>
             <div class="govuk-panel__body">
                 Submitted on<br><strong>@responses[0].Data.Created.ToString("dd MMM yyyy")</strong>
             </div>
