--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -2,7 +2,7 @@
 @model CheckYourEligibility_FrontEnd.Models.FsmApplication;
 
 @{
-    ViewData["Title"] = "Check Answers";
+    ViewData["Title"] = "Check your answers before sending";
     ViewData["Layout"] = "two_thirds";
     DateTime parentDOB = DateTime.ParseExact(Model.ParentDateOfBirth, "yyyy-MM-dd", CultureInfo.InvariantCulture);
     string formattedParentDOB = parentDOB.ToString("dd/MM/yyyy");
@@ -11,13 +11,7 @@
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-@if (!ViewData.ModelState.IsValid)
-{
-    ViewData["Title"] = "Check Answers";
-    <partial name="_ValidationSummary" model="ViewData.ModelState" />
-}
-
-<h1 class="govuk-heading-l">Check your answers before sending</h1>
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
 <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
