--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
@@ -1,9 +1,13 @@
+@{
+    ViewData["Title"] = "We could not check your children’s entitlement to free school meals";
+}
+
 @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
 <div id="content" data-type="Could_Not_Check" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
+        <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
         <p>You need to enter a National Insurance or asylum support reference number in order for the check to take place.</p>
         <p><a href="https://www.gov.uk/lost-national-insurance-number?">How to find your National Insurance number</a></p>
         <p>An asylum support reference number can usually be found on letters from the Home Office.</p>
