--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Technical_Error.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Check failed";
+}
+
 @model string
 
 @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
@@ -7,9 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
-                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                    Check failed
-                </h2>
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">@ViewData["Title"]</h2>
             </div>
             <div class="govuk-notification-banner__content">
                 <p class="govuk-notification-banner__heading">There’s been a technical error.</p>
