--- a/CheckYourEligibility-Parent/Views/Error/NotFound.cshtml
+++ b/CheckYourEligibility-Parent/Views/Error/NotFound.cshtml
@@ -1,2 +1,7 @@
+@{
+    ViewData["Title"] = "Not found";
+}
+
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 <h1 class="govuk-heading-l">Not found</h1>
 <p class="govuk-body">The page you are looking for cannot be found.</p>
