--- a/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Parental Guidance";
+    ViewData["Title"] = "Applying for free school meals - Guidance for parents and guardians";
     ViewData["Layout"] = "two_thirds";
 }
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<h1 class="govuk-heading-l">Applying for free school meals - Guidance for parents and guardians</h1>
+<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 <h2 class="govuk-heading-m">Who can get free school meals?</h2>
 
 <p class="govuk-body">Free school meals are available to pupils whose parents are receiving one or more of the following benefits, and meet the key conditions attached to each of them.</p>
