--- a/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
@@ -57,34 +57,23 @@
                 @Html.EditorFor(model => model.People)
             </table>
 
-            <nav class="govuk-pagination" role="navigation" aria-label="results navigation">
-                <ul class="govuk-pagination__list">
-                    @if (ViewBag.CurrentPage > 1)
-                    {
-                        <li class="govuk-pagination__item">
-                            <a class="govuk-link govuk-pagination__link" href="@Url.Action("AppealsApplications", new { PageNumber = ViewBag.CurrentPage - 1 })">Previous</a>
-                        </li>
-                    }
+        }
+        @{
+            var paginationModel = new PaginationPartialViewModel
+            {
+                CurrentPage = ViewBag.CurrentPage,
+                TotalPages = ViewBag.TotalPages,
+                RecordsPerPage = ViewBag.RecordsPerPage,
+                TotalRecords = ViewBag.TotalRecords,
+                ControllerName = "AppealsApplications"
+            };
 
-                    @for (int i = 1; i <= ViewBag.TotalPages; i++)
-                    {
-                        <li class="govuk-pagination__item @(ViewBag.CurrentPage == i ? "govuk-pagination__item--current" : "")">
-                            <a class="govuk-link govuk-pagination__link" href="@Url.Action("AppealsApplications", new { PageNumber = i })">@i</a>
-                        </li>
-                    }
-
-                    @if (ViewBag.CurrentPage < ViewBag.TotalPages)
-                    {
-                        <li class="govuk-pagination__item">
-                            <a class="govuk-link govuk-pagination__link" href="@Url.Action("AppealsApplications", new { PageNumber = ViewBag.CurrentPage + 1 })">Next</a>
-                        </li>
-                    }
-                </ul>
-            </nav>
+            @Html.Partial("PaginationPartial", paginationModel)
+        }
         }
         else
         {
-            <p>No results found.</p>
+        <p>No results found.</p>
         }
     </div>
 </div>
