--- a/CheckYourEligibility-Admin/Views/Home/Guidance.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Guidance.cshtml
@@ -10,6 +10,9 @@
 <h1 class="govuk-heading-l">Guidance for reviewing evidence </h1>
 <p>To find out if the children of a parent or guardian are entitled to free school meals, you’ll need to review the supporting evidence they've provided. </p>
 <p>Choose the relevant section from the evidence list for tailored guidance on how to review.</p>
+<p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a> </p>
+<p>For more help using this service, contact the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yXfS-grGoU2187O4s0qC-URYbNo1-R1EubHA0gNJis5UOVo3VU1KV0E0QkxTMFQ0RFZQUUZCR0E0WC4u">Department for Education support desk</a>.</p>
+
 
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
 
@@ -34,7 +37,6 @@
             </ul>
             <p>In line with these checks, the annual net earned income of the parent or guardian must be no higher than <strong>£7,400.</strong></p>
             <p>It’s preferable that you conduct all three checks if possible. However, if you don’t have three consecutive Universal Credit statements, you can use any combination of the checks to make a decision. </p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
@@ -42,7 +44,7 @@
         <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
                 <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-                    Support under part VI of the Immigration and Asylum Act 1999
+                    Support under Section 95 or Section 98 within part VI of the Immigration and Asylum Act 1999
                 </span>
             </h2>
         </div>
@@ -56,7 +58,6 @@
             </ul>
             <p>If the document provided  demonstrates that they receive such support, this is sufficient evidence for them to claim free school meals for their children.</p>
             <p>Note that some asylum seekers with a support reference number are claiming asylum under part IV of the Immigration and Asylum Act 1999. These claimants are not eligible.</p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
@@ -72,7 +73,6 @@
         <div id="accordion-default-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-3">
             <p>To see if a parent or guardian can claim free school meals for their children, check their Letter of Entitlement from the Department for Work and Pensions.</p>
             <p>If the letter states they are currently in receipt of Income Support, they also count as being entitled to free school meals.</p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
@@ -88,7 +88,6 @@
         <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
             <p>To see if a parent or guardian can claim free school meals for their children, check their Letter of Entitlement from the Department for Work and Pensions.</p>
             <p>If the letter states they are currently in receipt of income  based  Jobseeker’s Allowance (JSA), they also count as being entitled to free school meals.</p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
@@ -104,7 +103,6 @@
         <div id="accordion-default-content-5" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-5">
             <p>To see if a parent or guardian can claim free school meals for their children, check their Letter of Entitlement from the Department for Work and Pensions. This will typically be a Pension Credit M1000 Award Notice.</p>
             <p>If the letter states they are currently in receipt of Pension Credit, they also count as being entitled to free school meals.</p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
@@ -125,8 +123,6 @@
                 <li>Working Tax Credit is not also in payment - unless it is four week Working Tax Credit run on (see relevant section)</li>
                 <li>their annual gross income is no more than £16,190</li>
             </ul>
-            <p>Alternatively, you can contact the DfE support desk on <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to arrange a separate check.</p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
@@ -142,8 +138,6 @@
         <div id="accordion-default-content-7" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-7">
             <p>The parent or guardian needs to provide their latest tax credit statement form TC602A (Award Notices) or TC603R (Auto Renewal). The statement must be for the most recent tax year.</p>
             <p>If either of these forms show that  Working Tax Credit run-on is in payment, then they are entitled to claim free school meals for their children.</p>
-            <p>Alternatively, you can contact the DfE support desk on <a href="mailto:ecs.admin@education.gov.uk">ecs.admin@education.gov.uk</a> to arrange a separate check.</p>
-            <p>You can also <a target="_blank" href="https://assets.publishing.service.gov.uk/media/63d92829d3bf7f251e968cdb/Free_school_meals.pdf">read more in-depth free school meals guidance on GOV.UK.</a></p>
         </div>
     </div>
 
