update to content on guidance page

--- a/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
@@ -10,23 +10,28 @@
 <h1 class="govuk-heading-l">Applying for free school meals - Guidance for parents and guardians</h1>
 <h2 class="govuk-heading-m">Who can get free school meals?</h2>
 
-<p class="govuk-body">Free school meals are available to pupils whose parents are receiving one or more of the following benefits, and meet the key conditions attached to each of them.</p>
+<p class="govuk-body">Younger children aged 4 to 6 are always eligible for free school meals.</p>
+<p class="govuk-body">Children in compulsory education may be able to get free school meals if you, or they, get any of these benefits:</p>
 <ul class="govuk-list govuk-list--bullet">
-    <li>Universal Credit</li>
-    <li>Income based Jobseeker’s Allowance</li>
+    <li>Universal Credit - your household income must be less than £7,400 a year (after tax and not including any benefits you get)</li>
     <li>Income Support</li>
+    <li>Income based Jobseeker’s Allowance</li>
+    <li>Income-related Employment and Support Allowance</li>
+    <li>income-based Jobseeker’s Allowance</li>
+    <li>income-related Employment and Support Allowance</li>
     <li>support under Part VI of the Immigration and Asylum Act 1999</li>
-    <li>Pension Credit</li>
-    <li>Child Tax Credit</li>
-    <li>Working Tax Credit run on </li>
-    <p class="govuk-body">Older individuals who have their own National Insurance number and receive these benefits directly – rather than through a parent and guardian – are also entitled to free school meals if they meet the relevant conditions.</p>
+    <li>the guaranteed element of Pension Credit</li>
+    <li>Child Tax Credit (provided you’re not also entitled to Working Tax Credit and have an annual gross income of no more than £16,190)</li>
+    <li>Working Tax Credit run-on - paid for 4 weeks after you stop qualifying for Working Tax Credit</li>
 </ul>
+<p class="govuk-body">You should apply for free school meals even if you know your child will get them, as schools get extra funding based on the number of eligible children they record.</p>
+
 
 <h2 class="govuk-heading-m">How to apply for free school meals</h2>
 <p class="govuk-body">Follow these steps to apply for free school meals:</p>
 <ol class="govuk-list govuk-list--number">
-    <li>Go to <a href="https://www.freeschoolmealschecker.gov.uk " class="govuk-link">www.freeschoolmealschecker.gov.uk </a> to find out if you can claim free school meals for your children.</li>
-    <li>If you can, complete an application form in full at <a href="https://www.freeschoolmeals.gov.uk " class="govuk-link">www.freeschoolmeals.gov.uk </a> - or a paper form from your children’s school.</li>
+    <li><a href="~/Home" class="govuk-link">Check if your children can get free school meals</a> to find out if you are eligible.</li>
+    <li>If you can, complete the online application form in full or get a paper form from your children’s school.</li>
     <li>Your application will be processed, with your information being exchanged between the school and local authority via secure websites.</li>
     <li>You will receive a decision from the school and, if successful, the start date for free school meals.</li>
 </ol>
@@ -113,7 +118,7 @@
         <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
 
             <p>You can provide a Letter of Entitlement from the Department for Work and Pensions as evidence.</p>
-            <p>If this states that you are currently in receipt of income based Jobseeker’s Allowance (JSA), it will allow you to claim free school meals..</p>
+            <p>If this states that you are currently in receipt of income based Jobseeker’s Allowance (JSA), it will allow you to claim free school meals.</p>
 
         </div>
     </div>
