combine Search and SearchResults so the filter and results are on one page. Added SearchAllRecordsViewModel to facilitate the change. Update dashboard link and add some CSS rules.

--- a/CheckYourEligibility-Admin/wwwroot/css/site.css
+++ b/CheckYourEligibility-Admin/wwwroot/css/site.css
@@ -204,3 +204,17 @@ img, svg {
 }
 
 /*END - Remove whitespace from ApplicationDetailLA below name and actions */
+
+/*BEGIN - Inline style replace for search all records design team customised styles */
+
+.govuk-page-header-customisation {
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between;
+}
+
+.govuk-heading-m-customisation {
+    margin: 0;
+}
+
+/*END - Inline style replace for search all records design team customised styles */
