--- a/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Process_Appeals.cshtml
@@ -192,7 +192,7 @@
                 </table>
             </div>
         </div>
-    </div
+    </div>
 </div>
 
 <script src="/js/validationSummary.js"></script>
