Fix another merge error

--- a/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/SearchResults.cshtml
@@ -265,7 +265,7 @@
                                                                     <tr>
                                                                         <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
                                                                         <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + person.Person.ChildLastName)</td>
-                                                                        <td class="govuk-table__cell">@(Convert.ToDateTime(@person.Person.Created).ToString("d MMM yyyy"))</td>
+                                                                        <td class="govuk-table__cell">@(Convert.ToDateTime(@person.Person.ChildDateOfBirth).ToString("d MMM yyyy"))</td>
                                                                         <td class="govuk-table__cell">@person.Person.Created.ToString("d MMM yyyy")</td>
                                                                         <td class="govuk-table__cell">
                                                                             <strong class="govuk-tag @statusColor[person.Person.Status]">
